# agent

./: requirements.txt
Desktop/agent_new/x-langchain/: .dockerignore  .editorconfig  .gitignore  Dockerfile  README.md  e2e_web.txt  langgraph.json  null  pyproject.toml  pyrightconfig.json  run.py  upload_test_result.txt  环境配置说明.txt
Desktop/agent_new/x-langchain/backend/: app.py  app_simple.py
Desktop/agent_new/x-langchain/data/chat_history/: sessions.json  sessions.json.bak
Desktop/agent_new/x-langchain/data/generative_memory/: memory_stream.jsonl  plans.jsonl
Desktop/agent_new/x-langchain/data/semantic_memory/: memories.jsonl
Desktop/agent_new/x-langchain/docs/: 插件开发指南.md
Desktop/agent_new/x-langchain/examples/: agent_quick_start.py  batch_call.py  calendar_function_calling.py  chat_prompt_template.py  chat_prompt_template_with_icl.py  dynamic_model_selection.py  gradio_multimodal_deepseek.py  handle_tool_errors.py  llm_deepseek.py  llm_doubao.py  llm_mock.py  llm_tongyi.py  msgs.py  prompt_template.py  streaming_custom.py  streaming_messages.py  streaming_multimodes.py  streaming_updates.py  structured_output.py
Desktop/agent_new/x-langchain/frontend/: SilkChatBubble.jsx  index.html
Desktop/agent_new/x-langchain/src/: __init__.py  main.py
Desktop/agent_new/x-langchain/tests/: __init__.py  test_agent_factory.py  test_calendar_tool.py  test_constants.py  test_core_logger.py  test_exchange_rate_tool.py  test_main.py  test_mcp_tool.py  test_providers.py  test_settings.py  test_smoke.py  test_text_to_sql_safety.py  test_weather_tool.py  test_web_tool.py
(+46 files in other folders)
