[project]
name = "x-langchain"
version = "0.1.0"
description = "LangChain Learning and Practice Project"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    { name = "John Young", email = "john.young@foxmail.com" },
]
dependencies = [
    # Core LangChain
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-community>=0.4.1",
    # Configuration
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    # LLM Providers
    "dashscope>=1.25.11",
    # Tools
    "duckduckgo-search>=8.1.1",
    "ddgs>=9.11.1",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "langchain-mcp-adapters>=0.2.2",
    # Utilities
    "loguru>=0.7.3",
]

[project.optional-dependencies]
ui = [
    "gradio>=5.0.0",
    "pillow>=10.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
x-langchain = "main:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
